Fix mobile show/hide on tablet

--- a/src/modules/ui/Viewport/styles.module.css
+++ b/src/modules/ui/Viewport/styles.module.css
@@ -1,9 +1,15 @@
 .container {
   bottom: 0;
   left: 0;
+  opacity: 0;
   position: fixed;
   right: 0;
   top: 0;
+  transition: opacity 0.6s ease-in-out 0.4s;
+}
+
+.isVisible {
+  opacity: 1;
 }
 
 @media screen and (min-width: 901px) {
